--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,7 @@
       <p class="temp"></p>
       <p class="clouds"></p>
       <p class="desc"></p>
+      <p class="wind"></p>
     </div>
   </div>
 <script src="script.js"></script>
