--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,12 @@
       <h1>OpenWeatherMap API</h1>
       <p>Enter any city name in the input box below to get the data</p>
     </div> -->
-  
+    <label class="toggle-theme">
+      <input type="checkbox" />
+      <span class="switch"></span>
+      <p>☀️</p>
+      <p>🌙</p>
+    </label>
     <div class="input">
       <input type="text" placeholder="Enter the city" class="input_text">
       <input type="submit" value="Submit" class="submit">
